tests/ui/nested.stderr
error[E0727]: `async` generators are not yet supported
  --> $DIR/nested.rs:11:13
   |
11 |             yield i * i; //~ ERROR `async` generators are not yet supported [E0727]
   |             ^^^^^^^^^^^

error: aborting due to previous error

